# watch-postgres

./: Cargo.toml  queries.yml
src/: config.rs  main.rs
